--- a/class-4.html
+++ b/class-4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="class-4.css">
+        <link rel="stylesheet" href="style4.css">
         <title>
     headings & paragraphs
         </title>
