--- a/class-5.html
+++ b/class-5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="class-5.css">
+        <link rel="stylesheet" href="style5.css">
         <title>
     headings & paragraphs
         </title>
