--- a/class-6.html
+++ b/class-6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="class-6.css">
+        <link rel="stylesheet" href="style6.css">
         <title>
     headings & paragraphs
         </title>
