--- a/class3.html
+++ b/class3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="class-3.css">
+        <link rel="stylesheet" href="style3.css">
         <title>
     headings & paragraphs
         </title>
