--- a/class3.html
+++ b/class3.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style3.css">
         <title>
-    headings & paragraphs
+    syntax & terminology
         </title>
     
     </head>
