--- a/class-4.html
+++ b/class-4.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style4.css">
         <title>
-    headings & paragraphs
+    values & units
         </title>
     
     </head>
