--- a/class-5.html
+++ b/class-5.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style5.css">
         <title>
-    headings & paragraphs
+    color & property values
         </title>
     
     </head>
