--- a/class-6.html
+++ b/class-6.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style6.css">
         <title>
-    headings & paragraphs
+    selectors
         </title>
     
     </head>
