--- a/class-14.html
+++ b/class-14.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta name="description" content="a description">
         <title>
-            Accordion Panel
+            Typography
         </title>
         <link rel="shortcut icon" href="" type="image/x-icon">
         <link rel="stylesheet" href="style14.css">
